docs(jfr): add external references and Oracle quotes to all 14 proposals (pass 30)
Each event now has an "External references" section with:
- Oracle JDK 26 GC tuning doc quotes confirming the observability gap
- JEP links (JEP 521 Generational Shenandoah, JEP 439 Generational ZGC, JEP 522 G1 write barrier)
- JBS issue links (JDK-8212084 for GCOverheadLimitExceeded)
- GitHub PR links (PR #26756 NativeHeapTrim, PR #27950 GCOverheadLimitExceeded)

Key quotes added:
- G1ConcurrentRefinementSweep/Policy: Oracle quotes on Pending Cards, G1RSetUpdatingPauseTimePercent, G1ConcRefinementThreads
- G1CollectionSetCandidates: Oracle quotes on gc+ergo+cset=debug, G1MixedGCCountTarget, G1MixedGCLiveThresholdPercent, G1HeapWastePercent
- G1HeapResize: Oracle GCTimeRatio formula quote (1/(1+GCTimeRatio)=4% for G1 default)
- PSAdaptiveSizePolicy: Oracle Parallel GC docs on throughput goal, MaxGCPauseMillis default, goal priority order
- Shenandoah events (MMU, CollectionDecision, ReclaimProgress, TenuringThreshold): JEP 521 adaptive heuristics description
- ZGC events (ZGCTenuringThreshold, ZDirectorRule): JEP 439 dynamic tenuring/director description, Oracle ZGC tuning guide
- NativeHeapTrim: PR #26756 design discussion confirming narrow re-proposal scope
- GCOverheadLimitExceeded: JDK-8212084 + PR #27950 implementation description